--- a/plugins/HTTPServer/public/style.css
+++ b/plugins/HTTPServer/public/style.css
@@ -2,70 +2,96 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
 
 * {
-    margin: 0px;
-    padding: 0px;
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
            -box-sizing: border-box;
 }
 
 html {
-    mix-height: 100%;
-    border-bottom: 5px solid #eceef1;
-    padding-bottom: 1em;
+    padding: 30px 10px;
+    min-height: 100%;
     color: #61666c;
-    font-weight: 400;
-    font-size: 1em;
+    font-weight: 300;
+    font-size: 20px;
     font-family: 'Roboto', sans-serif;
-    line-height: 2em;
+    line-height: 1.4;
+    background: #f0f0f0;
+    background-image: url('/public/gradient.png');
+    background-repeat: repeat-x repeat-y;
 }
 
-.nav-sidebar {
-    position: fixed;
-    width: 10%;
-    height: 100%;
-    background: #a5a7a9;
-    padding: 1em 1em 1em 1em;
-    margin-right: 1em;
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
-.nav-sidebar ul {
-    list-style-type: none;
-    padding: 0em .25em;
-    border: none;
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
-.nav-sidebar ul > li {
-    width: 85%;
-    margin: 0em auto .4em auto;
-    text-align: center;
-    height: 3em;
-    border-top: 1px solid #ffffff;
-    padding: .5em 0em;
+body {
+    max-width: 90%;
+    width: 90%;
+    padding: 30px 20px 50px;
+    border: 1px solid #b3b3b3;
+    border-radius: 4px;
+    margin: 0 auto;
+    box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
+    background: #f0f0f0;
 }
 
 .container {
-    padding-left: 1em;
-    padding-top: 1em;
-    width: 90%;
+    position: relative;
+    max-width: 95%;
+    width: 95%;
     height: 100%;
-    float: right;
+    margin: 0px auto;
+    border-top: 1px solid #e1e1e1;
 }
 
 .container h1, .container h2, .container h3,
 .container h4, .container h5, .container h6 {
-    width: 99%;
-    -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, .55);
-       -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, .55);
-            box-shadow: 0px 0px 3px rgba(0, 0, 0, .55);
+    width: 100%;
     color: #000000;
-    padding: 1em 0em;
-    background: #3198dd;
-    background: -webkit-gradient(linear, left top, left bottom, from(#33acfc), to(#3198dd));
-    background: -moz-linear-gradient(top, #33acfc, #3198dd);
-    border-top: 1px dashed #a5a7a9;
-    font-size: 160%;
+    margin: .3em auto;
+    padding: 0em 0em;
+    font-size: 200%;
     text-align: center;
-    text-shadow: #2187c8 0px -1px 1px;
+    font-family: 'Roboto Slab', sans-serif;
+    z-index: 1000;
+}
+
+.divider {
+    width: 100%;
+    padding: .4em;
+    border-top: 1px solid #e1e1e1;
+}
+
+button {
+    display: inline-block;
+    padding: 0px 12px 4px 12px;
+    max-width: 100%;
+    margin: 0px auto;
+    font-size: 20px;
+    line-height: 1.4;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #000;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5), inset 0px 1px 0px rgba(255, 255, 255, 0.2);
+    border: 1px solid #ccc;
+    border-color: rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    border-bottom-color: #b3b3b3;
     font-family: 'Roboto Condensed', sans-serif;
+}
+
+a > button.home-link {
+    position: absolute;
+    bottom: 0%;
+    color: #fff;
+    border-radius: 0px 0px 4px 4px;
+    width: 100%;
+    background-color: #409cdb;
 }
