--- a/plugins/HTTPServer/public/style.css
+++ b/plugins/HTTPServer/public/style.css
@@ -48,6 +48,8 @@ body {
     height: 100%;
     margin: 0px auto;
     border-top: 1px solid #e1e1e1;
+    border-left: 1px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1;
 }
 
 .container h1, .container h2, .container h3,
